--- a/Proposal/app/src/main/res/layout/content_start.xml
+++ b/Proposal/app/src/main/res/layout/content_start.xml
@@ -12,8 +12,11 @@
     tools:context="proposalch.templer.proposal.StartActivity"
     tools:showIn="@layout/activity_start">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/coordinateContainer"
+        android:layout_alignParentStart="true"
+        android:editable="false" />
+
 </RelativeLayout>
