--- a/Proposal/app/src/main/res/layout/content_start.xml
+++ b/Proposal/app/src/main/res/layout/content_start.xml
@@ -12,11 +12,26 @@
     tools:context="proposalch.templer.proposal.StartActivity"
     tools:showIn="@layout/activity_start">
 
-    <EditText
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/coordinateContainer"
-        android:layout_alignParentStart="true"
-        android:editable="false" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="fragments example"
+            android:id="@+id/fragmentsButton"
+            android:layout_gravity="center_horizontal" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/coordinateContainer"
+            android:layout_alignParentStart="true"
+            android:editable="false" />
+    </LinearLayout>
 
 </RelativeLayout>
