--- a/Proposal/app/src/main/res/menu/menu_start.xml
+++ b/Proposal/app/src/main/res/menu/menu_start.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="proposalch.templer.proposal.StartActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_fragments"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_fragments"
         app:showAsAction="never" />
 </menu>
