--- a/Proposal/proposal/src/main/res/layout/content_fragment_container.xml
+++ b/Proposal/proposal/src/main/res/layout/content_fragment_container.xml
@@ -12,7 +12,7 @@
     tools:context=".FragmentContainerActivity"
     tools:showIn="@layout/activity_fragment_container">
 
-    <!--<fragment android:name="fragments.PictureSlideshowFragment"-->
+    <!--<fragment android:name="ch.templer.fragments.PictureSlideshowFragment"-->
         <!--android:id="@+id/headlines_fragment"-->
         <!--android:layout_weight="1"-->
         <!--android:layout_width="match_parent"-->
