--- a/Proposal/proposal/src/main/res/layout/fragment_picture_slideshow.xml
+++ b/Proposal/proposal/src/main/res/layout/fragment_picture_slideshow.xml
@@ -13,9 +13,8 @@
     android:text="@string/hello_blank_fragment" />
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
+        android:id="@+id/viewPager"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </android.support.v4.view.ViewPager>
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
