--- a/Proposal/proposal/src/main/res/layout/pager.xml
+++ b/Proposal/proposal/src/main/res/layout/pager.xml
@@ -1,3 +1,4 @@
+<!--
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/pager"
@@ -10,3 +11,10 @@
         android:layout_gravity="top"/>
 
 </android.support.v4.view.ViewPager>
+-->
+
+<ch.templer.viewpagger.InfiniteViewPager
+    xmlns:android="http://schemas.android.com/apk/res/android"
+android:id="@+id/pager"
+android:layout_width="match_parent"
+android:layout_height="match_parent" />
