--- a/Proposal/proposal/src/main/res/layout/fragment_text_messages.xml
+++ b/Proposal/proposal/src/main/res/layout/fragment_text_messages.xml
@@ -12,6 +12,16 @@
         android:layout_height="match_parent"
         android:gravity="center|center_horizontal"
         android:textSize="25dp"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:textColor="#ffffff" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@android:drawable/ic_media_next"
+        layout_behavior="com.support.android.designlibdemo.ScrollAwareFABBehavior"/>
 
 </FrameLayout>
