--- a/Proposal/proposal/src/main/res/layout/fragment_multiple_choice.xml
+++ b/Proposal/proposal/src/main/res/layout/fragment_multiple_choice.xml
@@ -10,7 +10,8 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal|top">
+        android:layout_gravity="center_horizontal|top"
+        android:background="#fd0000">
 
         <TextView
             android:layout_width="wrap_content"
