--- a/Proposal/proposal/src/main/res/layout/fragment_map.xml
+++ b/Proposal/proposal/src/main/res/layout/fragment_map.xml
@@ -2,18 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/TextMessageFragment_FrameLayout"
-    tools:context="ch.templer.fragments.TextMessagesFragment">
+    tools:context="ch.templer.fragments.MapFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/text_messages_fragment_content_textview"
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center|center_horizontal"
-        android:textSize="25dp"
-        android:layout_gravity="center"
-        android:textColor="#ffffff" />
+        android:visibility="gone"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingButton"
@@ -34,9 +30,8 @@
             android:id="@+id/reveal_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+            android:background="#008A00"/>
 
     </ch.templer.animation.reveallayout.RevealLayout>
-
-
 </FrameLayout>
