--- a/Proposal/proposal/src/main/res/layout/activity_fragment_container.xml
+++ b/Proposal/proposal/src/main/res/layout/activity_fragment_container.xml
@@ -7,7 +7,7 @@
     android:fitsSystemWindows="false"
     tools:context=".FragmentContainerActivity">
 
-    <ch.templer.animation.RevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <ch.templer.animation.reveallayout.RevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/reveal_layout"
         android:layout_width="match_parent"
@@ -26,14 +26,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"></FrameLayout>
         </RelativeLayout>
-    </ch.templer.animation.RevealLayout>
+    </ch.templer.animation.reveallayout.RevealLayout>
 
     <RelativeLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:gravity="bottom">
+        android:gravity="bottom"
+        android:visibility="gone">
 
         <Button
             android:id="@+id/next_fragment_button"
