--- a/Proposal/proposal/src/main/res/layout/pager.xml
+++ b/Proposal/proposal/src/main/res/layout/pager.xml
@@ -12,9 +12,38 @@
 
 </android.support.v4.view.ViewPager>
 -->
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/PictureFragment_FrameLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="ch.templer.fragments.TextMessagesFragment">
 
-<ch.templer.viewpagger.InfiniteViewPager
-    xmlns:android="http://schemas.android.com/apk/res/android"
-android:id="@+id/pager"
-android:layout_width="match_parent"
-android:layout_height="match_parent" />
+    <ch.templer.viewpagger.InfiniteViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@android:drawable/ic_media_next"
+        layout_behavior="com.support.android.designlibdemo.ScrollAwareFABBehavior"/>
+
+    <ch.templer.animation.reveallayout.RevealLayout
+        android:id="@+id/reveal_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible">
+
+        <View
+            android:id="@+id/reveal_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible" />
+
+    </ch.templer.animation.reveallayout.RevealLayout>
+</FrameLayout>
