--- a/Proposal/proposal/src/main/res/layout/fragment_map.xml
+++ b/Proposal/proposal/src/main/res/layout/fragment_map.xml
@@ -1,87 +1,11 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/CoordinatorLayout"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ch.templer.fragments.MapFragment">
-
-    <!--<ch.templer.controls.fabtoolbarlayout.FABToolbarLayout-->
-        <!--android:id="@+id/fabtoolbar"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--app:showDuration="600"-->
-        <!--app:hideDuration="200"-->
-        <!--app:horizontalMargin="30dp"-->
-        <!--app:verticalMargin="30dp"-->
-        <!--app:fadeInFraction="0.2"-->
-        <!--app:fabId="@+id/fabtoolbar_fab"-->
-        <!--app:containerId="@+id/fabtoolbar_container"-->
-        <!--app:fabToolbarId="@+id/fabtoolbar_toolbar">-->
-
-        <!--<fragment-->
-            <!--android:id="@+id/map"-->
-            <!--android:name="com.google.android.gms.maps.SupportMapFragment"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:visibility="gone"/>-->
-
-        <!--<RelativeLayout-->
-            <!--android:id="@id/fabtoolbar_container"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content">-->
-
-            <!--<android.support.design.widget.FloatingActionButton-->
-                <!--android:id="@id/fabtoolbar_fab"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--app:fabSize="normal"-->
-                <!--app:borderWidth="0dp"-->
-                <!--android:src="@drawable/abc_ic_menu_share_mtrl_alpha"/>-->
-
-        <!--</RelativeLayout>-->
-
-        <!--<LinearLayout-->
-            <!--android:id="@id/fabtoolbar_toolbar"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="70dp"-->
-            <!--android:layout_alignParentBottom="true"-->
-            <!--android:orientation="horizontal">-->
-
-            <!--<ImageView-->
-                <!--android:id="@+id/one"-->
-                <!--android:layout_width="0dp"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_weight="1"-->
-                <!--android:scaleType="centerInside"-->
-                <!--android:src="@drawable/abc_ic_menu_copy_mtrl_am_alpha"/>-->
-
-            <!--<ImageView-->
-                <!--android:id="@+id/two"-->
-                <!--android:layout_width="0dp"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_weight="1"-->
-                <!--android:scaleType="centerInside"-->
-                <!--android:src="@drawable/abc_ic_menu_paste_mtrl_am_alpha"/>-->
-
-            <!--<ImageView-->
-                <!--android:id="@+id/three"-->
-                <!--android:layout_width="0dp"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_weight="1"-->
-                <!--android:scaleType="centerInside"-->
-                <!--android:src="@drawable/abc_ic_menu_selectall_mtrl_alpha"/>-->
-
-            <!--<ImageView-->
-                <!--android:id="@+id/four"-->
-                <!--android:layout_width="0dp"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_weight="1"-->
-                <!--android:scaleType="centerInside"-->
-                <!--android:src="@drawable/abc_ic_menu_cut_mtrl_alpha"/>-->
-
-        <!--</LinearLayout>-->
-
-    <!--</ch.templer.controls.fabtoolbarlayout.FABToolbarLayout>-->
+    tools:context="ch.templer.fragments.mapfragment.MapFragment">
 
     <fragment
         android:id="@+id/map"
@@ -90,15 +14,79 @@
         android:layout_height="match_parent"
         android:visibility="gone"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_media_next"
-        layout_behavior="com.support.android.designlibdemo.ScrollAwareFABBehavior"/>
+    <ch.templer.controls.fab.fabtoolbarlayout.FABToolbarLayout
+        android:id="@+id/fabtoolbar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="ch.templer.controls.fab.fabtoolbarlayout.FABToolbarLayoutBehavior"
+        app:showDuration="600"
+        app:hideDuration="200"
+        app:horizontalMargin="30dp"
+        app:verticalMargin="30dp"
+        app:fadeInFraction="0.2"
+        app:fabId="@+id/fabtoolbar_fab"
+        app:containerId="@+id/fabtoolbar_container"
+        app:fabToolbarId="@+id/fabtoolbar_toolbar">
 
+        <RelativeLayout
+            android:id="@id/fabtoolbar_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@id/fabtoolbar_fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|bottom"
+                layout_behavior="ch.templer.controls.viewbehaviour.FloatingActionButtonBehavior"
+                app:fabSize="normal"
+                app:borderWidth="0dp"
+                android:src="@drawable/abc_ic_menu_share_mtrl_alpha"/>
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@id/fabtoolbar_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/refresh"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_sync_40dp"/>
+
+            <ImageView
+                android:id="@+id/car"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_directions_car_40dp"/>
+
+            <ImageView
+                android:id="@+id/train"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_directions_train_40dp"/>
+
+            <ImageView
+                android:id="@+id/walk"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_directions_walk_40dp"/>
+
+        </LinearLayout>
+
+    </ch.templer.controls.fab.fabtoolbarlayout.FABToolbarLayout>
     <ch.templer.controls.reveallayout.RevealLayout
         android:id="@+id/reveal_layout"
         android:layout_width="match_parent"
@@ -113,4 +101,4 @@
             android:background="#008A00"/>
 
     </ch.templer.controls.reveallayout.RevealLayout>
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
