--- a/Proposal/proposal/src/main/res/layout/fragment_text_messages.xml
+++ b/Proposal/proposal/src/main/res/layout/fragment_text_messages.xml
@@ -1,8 +1,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/TextMessageFragment_FrameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/TextMessageFragment_FrameLayout"
     tools:context="ch.templer.fragments.TextMessagesFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -10,23 +11,58 @@
         android:id="@+id/text_messages_fragment_content_textview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center|center_horizontal"
-        android:textSize="25dp"
         android:layout_gravity="center"
-        android:textColor="#ffffff"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp" />
+        android:gravity="center|center_horizontal"
+        android:textColor="#ffffff"
+        android:textSize="25dp" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingButton"
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="bottom|right"-->
+        <!--android:orientation="horizontal">-->
+
+        <!--<View-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="0dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:layout_gravity="bottom|right" />-->
+
+        <!--<android.support.design.widget.FloatingActionButton-->
+            <!--android:id="@+id/restartTextAnimationFab"-->
+            <!--layout_behavior="com.support.android.designlibdemo.ScrollAwareFABBehavior"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="bottom|right"-->
+            <!--android:src="@drawable/ic_refresh_24dp"-->
+            <!--android:layout_marginBottom="16dp" />-->
+
+        <!--<android.support.design.widget.FloatingActionButton-->
+            <!--android:id="@+id/nextFragmentFab"-->
+            <!--layout_behavior="com.support.android.designlibdemo.ScrollAwareFABBehavior"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="bottom|right|end"-->
+            <!--android:layout_margin="@dimen/fab_margin"-->
+            <!--android:src="@drawable/ic_arrow_forward_24dp" />-->
+        <!--android:layout_margin="@dimen/fab_margin" />-->
+
+    <!--</LinearLayout>-->
+
+    <io.github.yavski.fabspeeddial.FabSpeedDial
+        android:id="@+id/fab_speed_dial"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_media_next"
-        layout_behavior="com.support.android.designlibdemo.ScrollAwareFABBehavior"/>
+        app:fabGravity="bottom_end"
+        app:fabMenu="@menu/menu_main"
+        app:miniFabBackgroundTint="@android:color/white"
+        app:miniFabDrawableTint="?attr/colorPrimaryDark"
+        app:miniFabTitleTextColor="?attr/colorPrimaryDark" />
 
     <ch.templer.controls.reveallayout.RevealLayout
         android:id="@+id/reveal_layout"
