--- a/Proposal/proposal/src/main/res/layout/fragment_map.xml
+++ b/Proposal/proposal/src/main/res/layout/fragment_map.xml
@@ -38,6 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|bottom"
+                android:scaleType="fitXY"
                 layout_behavior="ch.templer.controls.viewbehaviour.FloatingActionButtonBehavior"
                 app:fabSize="normal"
                 app:borderWidth="0dp"
