--- a/Proposal/proposal/src/main/res/layout/fragment_finished.xml
+++ b/Proposal/proposal/src/main/res/layout/fragment_finished.xml
@@ -2,19 +2,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ch.templer.fragments.FinishedFragment">
+    tools:context="ch.templer.fragments.finishfragment.FinishedFragment"
+    android:background="@color/TRANSITION_COLOR_CYAN">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
+        android:id="@+id/finished_fragment_content"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Congratz you are finished" />
+        android:layout_height="match_parent">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="go back"
-        android:id="@+id/button"
-        android:layout_gravity="center" />
+        <TextView
+            android:id="@+id/fragment_finished_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/finished_fragment_congratulation"
+            android:layout_gravity="center_horizontal"
+            android:textSize="40dp"
+            android:textAlignment="center"
+            android:layout_margin="50dp"
+            android:textColor="#ffffff" />
+
+        <ImageButton
+            android:id="@+id/back_button"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            android:src="@drawable/check"
+            android:layout_marginBottom="20dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/fragment_finished_title"/>
+    </RelativeLayout>
 
 </FrameLayout>
