--- a/Proposal/proposal/src/main/res/layout/fragment_text_messages.xml
+++ b/Proposal/proposal/src/main/res/layout/fragment_text_messages.xml
@@ -4,7 +4,7 @@
     android:id="@+id/TextMessageFragment_FrameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ch.templer.fragments.TextMessagesFragment">
+    tools:context="ch.templer.fragments.textmessagesfragment.TextMessagesFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
@@ -20,49 +20,49 @@
         android:textColor="#ffffff"
         android:textSize="25dp" />
 
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="bottom|right"-->
-        <!--android:orientation="horizontal">-->
-
-        <!--<View-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="0dp"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_gravity="bottom|right" />-->
-
-        <!--<android.support.design.widget.FloatingActionButton-->
-            <!--android:id="@+id/restartTextAnimationFab"-->
-            <!--layout_behavior="com.support.android.designlibdemo.ScrollAwareFABBehavior"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="bottom|right"-->
-            <!--android:src="@drawable/ic_refresh_24dp"-->
-            <!--android:layout_marginBottom="16dp" />-->
-
-        <!--<android.support.design.widget.FloatingActionButton-->
-            <!--android:id="@+id/nextFragmentFab"-->
-            <!--layout_behavior="com.support.android.designlibdemo.ScrollAwareFABBehavior"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="bottom|right|end"-->
-            <!--android:layout_margin="@dimen/fab_margin"-->
-            <!--android:src="@drawable/ic_arrow_forward_24dp" />-->
-        <!--android:layout_margin="@dimen/fab_margin" />-->
-
-    <!--</LinearLayout>-->
-
-    <io.github.yavski.fabspeeddial.FabSpeedDial
-        android:id="@+id/fab_speed_dial"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        app:fabGravity="bottom_end"
-        app:fabMenu="@menu/menu_main"
-        app:miniFabBackgroundTint="@android:color/white"
-        app:miniFabDrawableTint="?attr/colorPrimaryDark"
-        app:miniFabTitleTextColor="?attr/colorPrimaryDark" />
+        android:layout_gravity="bottom|right"
+        android:orientation="vertical">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_gravity="bottom|right" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/restartTextAnimationFab"
+            layout_behavior="com.support.android.designlibdemo.ScrollAwareFABBehavior"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:src="@drawable/ic_refresh_24dp"
+            android:layout_margin="@dimen/fab_margin"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/nextFragmentFab"
+            layout_behavior="com.support.android.designlibdemo.ScrollAwareFABBehavior"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="@dimen/fab_margin"
+            android:src="@drawable/ic_arrow_forward_24dp" />
+        android:layout_margin="@dimen/fab_margin" />
+
+    </LinearLayout>
+
+    <!--<io.github.yavski.fabspeeddial.FabSpeedDial-->
+        <!--android:id="@+id/fab_speed_dial"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="bottom|end"-->
+        <!--app:fabGravity="bottom_end"-->
+        <!--app:fabMenu="@menu/menu_main"-->
+        <!--app:miniFabBackgroundTint="@android:color/white"-->
+        <!--app:miniFabDrawableTint="?attr/colorPrimaryDark"-->
+        <!--app:miniFabTitleTextColor="?attr/colorPrimaryDark" />-->
 
     <ch.templer.controls.reveallayout.RevealLayout
         android:id="@+id/reveal_layout"
