--- a/Proposal/proposal/src/main/res/layout/pager.xml
+++ b/Proposal/proposal/src/main/res/layout/pager.xml
@@ -17,7 +17,7 @@
     android:id="@+id/PictureFragment_FrameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ch.templer.fragments.TextMessagesFragment">
+    tools:context="ch.templer.fragments.textmessagesfragment.TextMessagesFragment">
 
     <!--<ch.templer.viewpagger.InfiniteViewPager xmlns:android="http://schemas.android.com/apk/res/android"-->
         <!--android:id="@+id/pager"-->
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_media_next"
+        android:src="@drawable/ic_arrow_forward_24dp"
         layout_behavior="com.support.android.designlibdemo.ScrollAwareFABBehavior"/>
 
     <ch.templer.controls.reveallayout.RevealLayout
