--- a/Proposal/proposal/src/main/res/layout/fragment_finished.xml
+++ b/Proposal/proposal/src/main/res/layout/fragment_finished.xml
@@ -19,8 +19,11 @@
             android:layout_gravity="center_horizontal"
             android:textSize="40dp"
             android:textAlignment="center"
-            android:layout_margin="50dp"
-            android:textColor="#ffffff" />
+            android:textColor="#ffffff"
+            android:layout_marginBottom="50dp"
+            android:layout_marginLeft="33dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginRight="33dp" />
 
         <ImageButton
             android:id="@+id/back_button"
