--- a/Proposal/proposal/src/main/res/layout/fragment_picture_slideshow.xml
+++ b/Proposal/proposal/src/main/res/layout/fragment_picture_slideshow.xml
@@ -1,20 +1,36 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/PictureFragment_FrameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PictureSlideshowFragment">
+    tools:context="ch.templer.fragments.textmessagesfragment.TextMessagesFragment">
 
-    <!-- The primary full-screen view. This can be replaced with whatever view
-     is needed to present your content, e.g. VideoView, SurfaceView,
-     TextureView, etc. -->
-    <TextView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="@string/hello_blank_fragment" />
+    <ch.templer.controls.viewpagger.HackyViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_arrow_forward_24dp"
+        layout_behavior="com.support.android.designlibdemo.ScrollAwareFABBehavior"/>
 
+    <ch.templer.controls.reveallayout.RevealLayout
+        android:id="@+id/reveal_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible">
+
+        <View
+            android:id="@+id/reveal_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible" />
+
+    </ch.templer.controls.reveallayout.RevealLayout>
 </FrameLayout>
