--- a/Proposal/proposal/src/main/res/layout/fragment_text_messages.xml
+++ b/Proposal/proposal/src/main/res/layout/fragment_text_messages.xml
@@ -39,7 +39,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
             android:src="@drawable/ic_refresh_24dp"
-            android:layout_margin="@dimen/fab_margin"/>
+            android:layout_marginLeft="@dimen/fab_margin"
+            android:layout_marginTop="@dimen/fab_margin"
+            android:layout_marginRight="@dimen/fab_margin" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/nextFragmentFab"
@@ -52,17 +54,6 @@
         android:layout_margin="@dimen/fab_margin" />
 
     </LinearLayout>
-
-    <!--<io.github.yavski.fabspeeddial.FabSpeedDial-->
-        <!--android:id="@+id/fab_speed_dial"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="bottom|end"-->
-        <!--app:fabGravity="bottom_end"-->
-        <!--app:fabMenu="@menu/menu_main"-->
-        <!--app:miniFabBackgroundTint="@android:color/white"-->
-        <!--app:miniFabDrawableTint="?attr/colorPrimaryDark"-->
-        <!--app:miniFabTitleTextColor="?attr/colorPrimaryDark" />-->
 
     <ch.templer.controls.reveallayout.RevealLayout
         android:id="@+id/reveal_layout"
